--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/shubhvjain/infodb-core/issues"
   },
-  "homepage": "https://github.com/shubhvjain/infodb-core#readme"
+  "homepage": "https://github.com/shubhvjain/infodb-core#readme",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "dotenv": "^16.4.5",
+    "nano": "^10.1.3"
+  }
 }
