--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "dotenv": "^16.4.5",
-    "nano": "^10.1.3"
+    "nano": "^10.1.3",
+    "pouchdb": "^9.0.0",
+    "pouchdb-adapter-memory": "^9.0.0",
+    "pouchdb-find": "^9.0.0"
   }
 }
