fixing the pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,15 @@ jobs:
     steps:
     # Step 1: Check out the code from the repository
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     # Step 2: Set up Node.js environment
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '20.17.0'  # Specify the Node.js version you want to use
-        cache: 'npm'         # Cache npm modules for faster builds
+        node-version: '20.17.0'  
+        cache: 'npm'         
+        registry-url: 'https://registry.npmjs.org'
 
     # Step 3: Install dependencies
     - name: Install dependencies
