--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "beanbagdb",
-  "version": "0.5.1",
+  "version": "0.5.46",
   "description": "A JS library to introduce a schema layer to a No-SQL local database",
   "main": "src/index.js",
+  "module": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "mocha"
   },
@@ -23,16 +25,13 @@
     "url": "https://github.com/shubhvjain/beanbagdb/issues"
   },
   "homepage": "https://github.com/shubhvjain/beanbagdb#readme",
-  "dependencies": {
-    "ajv": "^8.12.0",
-    "dotenv": "^16.4.5",
-    "nano": "^10.1.3",
-    "pouchdb": "^9.0.0",
-    "pouchdb-adapter-memory": "^9.0.0",
-    "pouchdb-find": "^9.0.0"
-  },
   "devDependencies": {
+    "ajv": "^8.17.1",
     "chai": "^5.1.1",
-    "mocha": "^10.7.3"
+    "dotenv": "^16.4.5",
+    "mocha": "^10.7.3",
+    "nano": "^10.1.4",
+    "pouchdb": "^9.0.0",
+    "pouchdb-find": "^9.0.0"
   }
 }
