--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beanbagdb",
-  "version": "0.5.46",
+  "version": "0.5.50",
   "description": "A JS library to introduce a schema layer to a No-SQL local database",
   "main": "src/index.js",
   "module": "src/index.js",
@@ -29,6 +29,7 @@
     "ajv": "^8.17.1",
     "chai": "^5.1.1",
     "dotenv": "^16.4.5",
+    "jsdoc": "^4.0.3",
     "mocha": "^10.7.3",
     "nano": "^10.1.4",
     "pouchdb": "^9.0.0",
